# Ame

./: .clang-format  .env.test.template  .eslintrc.js  .git-blame-ignore-revs  .gitignore  .prettierignore  .prettierrc.js  .yarnrc.yml  LICENSE  README.md  electron-builder.js  electron-builder.yml  package.json  tsconfig.json
.codebuddy/rules/: build-command.mdc
.github/workflows/: build.yml  ci.yml  codeql-analysis.yml  release.yml
.husky/: pre-commit
.yarn/patches/: conf-npm-10.2.0-8d0cbf5589.patch  tesseract.js-npm-5.0.5-96ba770781.patch
config/: DevSpeedupPlugin.mts  DevSpeedupPlugin.ts  LogPlugin.mts  LogPlugin.ts  NativePlugin.mts  NativePlugin.ts  RenderResolver.mts  antdv-resolver.ts  build.js  rollup.main.config.mts  rollup.main.config.ts  rollup.test.config.mts  rollup.test.config.ts  rollup.workers.config.mts  rollup.workers.config.ts  vite.render.config.mts  vite.render.config.ts
native/: CMakeLists.txt  DrEyeCli.cpp  JBeijingCli.cpp  binding.gyp
native/addons/: CMakeLists.txt  binding.gyp  utils.h
native/addons/PP-OCR/: CMakeLists.txt  Detecter.cpp  Detecter.h  Detector.cpp  Detector.h  Detector_test.cpp  Recognizer.cpp  Recognizer.h  Recognizer_test.cpp  binding.cpp  dict.hpp  example.cpp
native/addons/Process/: CMakeLists.txt  init.cpp
native/addons/ScreenCapturer/: CMakeLists.txt  capture.cpp  findWindow.cpp  init.cpp
native/addons/WindowEventHook/: CMakeLists.txt  init.cpp
native/addons/WindowsHook/: CMakeLists.txt  init.cpp
native/cli/: CMakeLists.txt  DrEyeCli.cpp  JBeijingCli.cpp  binding.gyp
src/main/: Context.ts  General.ts  InsecureRemoteBrowserView.ts  Session.ts  TranslatorWindow.ts  index.dev.ts  index.ts  paths.ts  static.ts
src/main/extractor/: BaseExtractor.ts  IExtractor.ts  OCRExtractor.ts  Textractor.ts  index.ts
src/main/hook/: GlobalKeyboardEventHook.ts  GlobalMouseEventHook.ts  WindowEventHook.ts  index.ts
src/main/logger/: index.ts
src/main/manager/: BaseManager.ts  TTSManager.ts  TranslateManager.ts  index.ts
src/main/providers/: BaseProvider.ts  DictProvider.ts  OCRProvider.ts  OcrProvider.ts  SegmentProvider.ts  TTSProvider.ts  TranslateProvider.ts  TtsProvider.ts  index.ts
src/main/remote/: dialog.ts  dict.ts  extract.ts  findWindow.ts  handle.ts  icon.ts  index.ts  ocr.ts  options.ts  segment.ts  setting.ts  startGame.ts  store.ts  textractor.ts  tts.ts  watch.ts  windowOperation.ts
src/main/schema/: index.ts
src/main/store/: dictManager.ts  dictProviders.ts  games.ts  general.ts  index.ts  localeChangers.ts  ocrExtractor.ts  ocrProviders.ts  segmentManager.ts  segmentProviders.ts  translateProviders.ts  ttsManager.ts  ttsProviders.ts  ui.ts  utils.ts
src/main/utils/: TaskQueue.ts  index.ts
src/main/win32/: index.ts  powershell.ts  process.ts  win32api.ts
src/main/window/: InsecureRemoteBrowserWindow.ts  OcrGuideWindow.ts  TranslatorWindow.ts  WindowWithContext.ts  WindowWithGeneral.ts  WindowWithSession.ts
src/remote/: common.ts  dialog.ts  dict.ts  extract.ts  findWindow.ts  icon.ts  index.ts  ocr.ts  options.ts  segment.ts  setting.ts  startGame.ts  store.ts  textractor.ts  tts.ts  watch.ts  windowOperation.ts
src/render/: MainWindow.html  MainWindow.ts  MainWindow.vue  OcrGuide.html  OcrGuide.ts  OcrGuide.vue  TranslatorWindow.html  TranslatorWindow.ts  TranslatorWindow.vue  components.d.ts  tablet-mode.css
src/render/component/: GameCard.vue  InputWithOpenFile.vue  Spin.ts  TextractorSetting.vue  TranslatorTitleBar.vue
src/render/logger/: index.ts
src/render/remote/: dialog.ts  dict.ts  extract.ts  findWindow.ts  handle.ts  icon.ts  index.ts  ocr.ts  options.ts  segment.ts  setting.ts  startGame.ts  store.ts  textractor.ts  tts.ts  watch.ts  windowOperation.ts
src/render/router/: MainWindow.ts  TranslatorWindow.ts
src/render/store/: index.ts
src/render/utils/: checkIfUnsaved.ts  index.ts
src/render/views/: AddGame.vue  AsideMenu.vue  Dashboard.vue  ExtractSetting.vue  HookSelect.vue  LocaleChangersOptions.vue  Options.vue  Translator.vue
src/type/: Ame.d.ts  addons-shim.d.ts  addons.d.ts  ipc.d.ts  logger-shim.d.ts  logger.d.ts  segmenter.d.ts  vite.d.ts  vue-shim.d.ts
src/workers/intl-segmenter/: index.ts
src/workers/tesseract/: index.ts
src/workers/tesseract-worker-script/: index.ts
test/: index.spec.ts
test/SimpleWindow/: index.js  index.ts  run.js
test/main/: env.ts
test/main/hook/: WindowEventHook.spec.ts
test/main/manager/: TranslateManager.spec.ts
test/main/providers/: BaseProvider.spec.ts  index.ts
test/main/schema/: index.spec.ts
test/main/utils/: TaskQueue.spec.ts
vite/: LogPlugin.ts  build.js  tesseract.ts  vite.main.config.ts  vite.render.config.ts  vite.test.config.ts  vite.workers.config.ts
(+78 files in other folders)
